# chack-tools

./: .env.example  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
chack_agent/: __init__.py  agent.py  config.py  env_utils.py  long_term_memory.py  pricing.py
chack_agent/backends/: __init__.py  openai_agents_backend.py
chack_agent/config/: pricing.yaml
chack_tools/: __init__.py  agents_toolset.py  brave_search.py  config.py  exec_tool.py  forumscout_search.py  pdf_text.py  scientific_research_agent.py  scientific_search.py  serpapi_web_search.py  social_network_agent.py  subagent_config.py  task_list_tool.py  tester_agent.py  tool_usage_state.py  websearcher_agent.py
